# ClipIt-Screen-Capture-App

./: .gitignore  LICENSE  MyAV-audio-and-video.py  README.md  auto_py_to_exe_build_config.json  encoder.py  main.py  moviePy-audio-and-video.py  pyproject.toml  readme.md  recorder.py  recorder_audio.py  recorder_loopback.py  recorder_microphone.py  recorder_video.py  recorder_video_moviePy.py  requirements.txt  silence_player.py  utils_audio.py
src/: __main__.py  editor.py  encoder.py  logger.py  main.py  merger.py  settings.py  testt.py
src/gui/: area_selector.py  button_select_area.py  capture_area_rectangle.py  capture_area_selection.py  main.py  main_window.py  recording_area_border.py  region_selection.py  region_selector.py  root.py  video_preview.py
src/gui/application/: application.py  logo.psd
src/gui/area_widgets/: area_border_creator.py  area_selector.py
src/gui/editing_timeline/: _media_item.py  _media_item_right_handle.py  _ruler.py  _ruler_handle.py  handle.py  handle_prototype.py  media_item.py  media_item_left_handle.py  media_item_right_handle.py  media_itemm.py  ruler.py  ruler_handle.py  time_utils.py  timeline.py  video_preview.py  video_timeline.py  video_track.py
src/gui/editor/: editor.py
src/gui/main_window/: MainWindow.qss  MainWindow.ui  MainWindow_ui.py  (+4 more)
src/recorder/: calibrate_fps.py  recorder.py  recorder_loopback.py  recorder_microphone.py  recorder_video.py
src/settings/: settings.ini  settings.py
src/utilities/: audio.py  console_hider.py  nuitka_command_generator.py  py_installer.py  single_instance_checker.py  video.py
(+123 files in other folders)
