[tool.poetry]
name = "clipit"
version = "1.0.0"
description = ""
authors = ["ephell"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
certifi = "2023.7.22"
charset-normalizer = "3.3.1"
colorama = "0.4.6"
decorator = "4.4.2"
idna = "3.4"
imageio = "2.31.6"
imageio-ffmpeg = "0.4.9"
moviepy = "1.0.3"
mss = "9.0.1"
numpy = "1.26.1"
Pillow = "10.0.1"
playsound = "1.2.2"
proglog = "0.1.10"
PyAudioWPatch = "0.2.12.6"
pynput = "1.7.6"
PySide6 = "6.5.2"
PySide6-Addons = "6.5.2"
PySide6-Essentials = "6.5.2"
pywin32 = "306"
requests = "2.31.0"
shiboken6 = "6.5.2"
six = "1.16.0"
tqdm = "4.66.1"
urllib3 = "2.0.7"


[tool.poetry.group.dev.dependencies]
nuitka = "1.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
